@@ -97,7 +97,7 @@ class text_input_module extends Unit_Module {
             $grade = $unit_module->get_response_grade($response->ID);
         }
         ?>
-        <?php if ( ( isset($data->answer_length) && $data->answer_length == 'single' ) || (!isset($data->answer_length) ) ) { ?>
+        <?php if ( ( isset($data->checked_length) && $data->checked_length == 'single' ) || (!isset($data->checked_length) ) ) { ?>
             <div class="<?php echo $this->name; ?> front-single-module<?php echo ( $this->front_save == true ? '-save' : '' ); ?>">
                 <?php if ( $data->post_title != '' && $this->display_title_on_front($data) ) { ?>
                     <h2 class="module_title"><?php echo $data->post_title; ?></h2>
@@ -160,6 +160,7 @@ class text_input_module extends Unit_Module {
             </h3>
 
             <div class="module-content">
+                <input type="hidden" name="<?php echo $this->name; ?>_checked_index[]" class='checked_index' value="0" />
                 <input type="hidden" name="<?php echo $this->name; ?>_module_order[]" class="module_order" value="<?php echo ( isset($data->module_order) ? $data->module_order : 999 ); ?>" />
                 <input type="hidden" name="module_type[]" value="<?php echo $this->name; ?>" />
                 <input type="hidden" name="<?php echo $this->name; ?>_id[]" class="unit_element_id" value="<?php echo esc_attr(isset($data->ID) ? $data->ID : '' ); ?>" />
@@ -203,8 +204,8 @@ class text_input_module extends Unit_Module {
 
             <div class="answer_length">  
                 <label class="bold-label"><?php _e('Answer Length', 'cp'); ?></label>
-                <input type="radio" name="<?php echo $this->name; ?>_answer_length[]" value="single" <?php ?> <?php echo ( isset($data->answer_length) && $data->answer_length == 'single' ? 'checked' : (!isset($data->answer_length) ) ? 'checked' : '' ) ?> /> <?php _e('Single Line', 'cp'); ?><br /><br />
-                <input type="radio" name="<?php echo $this->name; ?>_answer_length[]" value="multi" <?php echo ( isset($data->answer_length) && $data->answer_length == 'multi' ? 'checked' : '' ); ?> /> <?php _e('Multiple Lines', 'cp'); ?>
+                <input type="radio" name="<?php echo $this->name . '_answer_length[' . ( isset($data->module_order) ? $data->module_order : 999 ) . '][]'; ?>" value="single" <?php ?> <?php echo ( isset($data->checked_length) && $data->checked_length == 'single' ? 'checked' : (!isset($data->checked_length) ) ? 'checked' : '' ) ?> /> <?php _e('Single Line', 'cp'); ?><br /><br />
+                <input type="radio" name="<?php echo $this->name . '_answer_length[' . ( isset($data->module_order) ? $data->module_order : 999 ) . '][]'; ?>" value="multi" <?php echo ( isset($data->checked_length) && $data->checked_length == 'multi' ? 'checked' : '' ); ?> /> <?php _e('Multiple Lines', 'cp'); ?>
             </div>
 
             <?php echo $this->placeholder_element($data); ?>
@@ -249,6 +250,7 @@ class text_input_module extends Unit_Module {
                             $data->unit_id = ( ( isset($_POST['unit_id']) and ( isset($_POST['unit']) && $_POST['unit'] != '' ) ) ? $_POST['unit_id'] : $last_inserted_unit_id );
                             $data->title = $_POST[$this->name . '_title'][$key];
                             $data->content = $_POST[$this->name . '_content'][$key];
+                            $data->metas['checked_length'] = $_POST[$this->name . '_checked_index'][$key];
                             $data->metas['module_order'] = $_POST[$this->name . '_module_order'][$key];
                             $data->metas['placeholder_text'] = $_POST[$this->name . '_placeholder_text'][$key];
                             $data->metas['answer_length'] = $_POST[$this->name . '_answer_length'][$key];
